<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Milestone Settings</string>

    <string name="dock_title">Dock</string>
    <string name="keypad_title">Keyboard</string>
    <string name="qtouch_title">Touchscreen</string>
    <string name="debug_title">Debugging</string>
    <string name="battery_title">Battery</string>
    <string name="baseband_title">Baseband</string>

    <string name="pref_dock_observer_off_title">Disable dock observer</string>
    <string name="pref_dock_observer_off_summary">No action on magnets, useful for users of carrying cases with magnetic closure</string>

    <string name="pref_baseband_title">Baseband selection</string>
    <string name="pref_baseband_summary">Choose UMTS bands appropriate for your phone (requires reboot)\nCurrently set to: %s</string>

    <string name="pref_keypad_multipress_title">Multipress interval</string>
    <string name="pref_keypad_multipress_summary">Subsequent key presses within this interval can be used to directly enter alternate characters.\nCurrently set to: %s</string>
    <string name="pref_keypad_mplang_title">Multipress language</string>
    <string name="pref_keypad_mplang_summary">Language selection for entering alternate characters via multipress feature.\nCurrently set to: %s</string>

    <string name="pref_qtouch_num_title">Multitouch</string>
    <string name="pref_qtouch_num_summary">Set number of distinct touches to be recognized by touchscreen</string>
    <string name="pref_logger_title">Enable logger</string>
    <string name="pref_logger_summary">Enable logging to /cache/logger</string>

    <string name="audio_settings_title">Audio</string>
    <string name="audio_effects">Moto Audio Effects</string>

    <string name="compass_settings_title">Compass</string>
    <string name="compass_calibrate">Compass calibrator</string>

    <string name="ui_status_bar_oneperc_battery_title">1% battery steps</string>
    <string name="ui_status_bar_oneperc_battery_summary">Show battery percentage in 1% steps. May cause issues with third party batteries and AC adapters. (Requires reboot)</string>

    <string name="keyboard_layouts_label">Milestone keypad</string>
    <string name="sholes_keypad_arabic_label">.Arabic</string>
    <string name="sholes_keypad_azerty_label">.Azerty</string>
    <string name="sholes_keypad_cyrillic_label">.Cyrillic (phonetic)</string>
    <string name="sholes_keypad_euro_qwerty_label">.Euro qwerty</string>
    <string name="sholes_keypad_hebrew_label">.Hebrew</string>
    <string name="sholes_keypad_qwerty_label">.Qwerty</string>
    <string name="sholes_keypad_qwertz_label">.Qwertz</string>
    <string name="sholes_keypad_russian_label">.Russian</string>
    <string name="sholes_keypad_russian_qwerty_label">.Russian qwerty</string>
    <string name="sholes_keypad_swe_qwerty_label">.Swedish qwerty</string>

    <string name="modem_error">Telephony problem</string>
    <string name="touch_for_info">Touch for information</string>
    <string name="reboot_timeout_msg">If no action is selected, the device will reboot in %1$d seconds.</string>
    <string name="modem_error_msg">A problem was detected in the phone\'s telephony layer. A reboot of the phone is required to repair the phone state.\nWhat do you want to do?</string>
    <string name="reboot_btn">Reboot now</string>
    <string name="snooze_btn">Remind again later</string>
    <string name="dismiss_btn">Don\'t remind again</string>
    <string name="device_rebooted_modem_error">The device was rebooted due to a problem in the phone\'s telephony layer.</string>
</resources>
